Changes before error encountered
Agent-Logs-Url: https://github.com/Vempain/vempain-admin-backend/sessions/7df35dc4-52de-4619-80a6-60a057aae5a7

Co-authored-by: Poltsi <7220597+Poltsi@users.noreply.github.com>